objects/nCBC__Credit_Record__c.object
<CustomObject>
    <fields>
        <fullName>nCBC__ContactId__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Records</relationshipLabel>
        <relationshipName>Credit_Records1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nCBC__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>nCBC__Credit_Report__c</referenceTo>
        <relationshipLabel>Credit Records</relationshipLabel>
        <relationshipName>Credit_Records1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nCBC__Credit_Record_Type__c</fullName>
        <label>Credit Record Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__LiabilityId__c</fullName>
        <label>Liability Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__LiabilityType__c</fullName>
        <label>Liability Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__accountOwnershipType__c</fullName>
        <label>Account Ownership Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nCBC__balanceDate__c</fullName>
        <label>Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nCBC__bankruptAdjAmt__c</fullName>
        <label>Bankruptcy Adjustment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nCBC__bankruptLiabAmt__c</fullName>
        <label>Bankruptcy Liability Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nCBC__bankruptRepayAmt__c</fullName>
        <label>Bankruptcy Repayment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nCBC__bankruptcyAssetAmount__c</fullName>
        <label>Bankruptcy Asset Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nCBC__consumerComment__c</fullName>
        <label>Consumer Comment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__creditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nCBC__creditType__c</fullName>
        <label>Credit Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__delinqOver30Days__c</fullName>
        <label>Delinquency Over 30 Days</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__delinqOver60Days__c</fullName>
        <label>Delinquency Over 60 Days</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__delinqOver90Days__c</fullName>
        <label>Delinquency Over 90 Days</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__dispositionRecord__c</fullName>
        <label>Disposition Record</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__dispositionType__c</fullName>
        <label>Disposition Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__disputeFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispute Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__docketIdentifier__c</fullName>
        <label>Docket Identifier</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__filingDate__c</fullName>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__holder__c</fullName>
        <label>Holder</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__inquiryDate__c</fullName>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__isDerogratory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Derogatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__kindOfBusiness__c</fullName>
        <label>Kind of Business</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__loanType__c</fullName>
        <label>Loan Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__modelName__c</fullName>
        <label>Model Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__monthlyPayment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nCBC__monthsOfHistory__c</fullName>
        <label>Months of History</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__mostRecentAdverseRating__c</fullName>
        <label>Most Recent Adverse Rating</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__openDate__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__plaintiffName__c</fullName>
        <label>Plaintiff Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__recordType__c</fullName>
        <label>Record Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__scoreDate__c</fullName>
        <label>Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nCBC__scoreFactors__c</fullName>
        <label>Score Factors</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nCBC__scoreValue__c</fullName>
        <label>Score Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__subDisplayName__c</fullName>
        <label>Subscriber Display Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__subscriberCode__c</fullName>
        <label>Subscriber Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Credit Record</label>
    <nameField>
        <label>Credit Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>